[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Food.gd" type="Script" id=2]

[sub_resource type="SphereShape3D" id=1]
radius = 0.15

[sub_resource type="SphereShape3D" id=2]
radius = 0.15

[sub_resource type="StandardMaterial3D" id=4]
flags_transparent = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
params_billboard_mode = 1

[sub_resource type="SpriteFrames" id=3]
resource_local_to_scene = true
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Food" type="CharacterBody3D" groups=["throwable"]]
collision_layer = 32768
collision_mask = 7
script = ExtResource( 2 )
splat_colors = [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( 1 )

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
material_override = SubResource( 4 )
pixel_size = 0.005
billboard = 1
double_sided = false
alpha_cut = 2

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2( 96, 96 )
transparent_bg = true
handle_input_locally = false
keep_3d_linear = true
render_target_v_flip = true
gui_disable_input = true

[node name="FoodSprite" type="Node2D" parent="SubViewport"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SubViewport/FoodSprite"]
frames = SubResource( 3 )
centered = false

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_Area_body_exited"]
